tests/miniJava/neg/005169_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] return ) { return 0 ; } }
